; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_gcm.c___gcm_hash_final_done.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_gcm.c___gcm_hash_final_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aead_request = type { i32 }
%struct.crypto_gcm_req_priv_ctx = type { i32, i32, %struct.crypto_gcm_ghash_ctx }
%struct.crypto_gcm_ghash_ctx = type { i32 (%struct.aead_request.0*, i32)* }
%struct.aead_request.0 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.aead_request*, i32)* @__gcm_hash_final_done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__gcm_hash_final_done(%struct.aead_request* %0, i32 %1) #0 {
  %3 = alloca %struct.aead_request*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.crypto_gcm_req_priv_ctx*, align 8
  %6 = alloca %struct.crypto_gcm_ghash_ctx*, align 8
  store %struct.aead_request* %0, %struct.aead_request** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.aead_request*, %struct.aead_request** %3, align 8
  %8 = call %struct.crypto_gcm_req_priv_ctx* @crypto_gcm_reqctx(%struct.aead_request* %7)
  store %struct.crypto_gcm_req_priv_ctx* %8, %struct.crypto_gcm_req_priv_ctx** %5, align 8
  %9 = load %struct.crypto_gcm_req_priv_ctx*, %struct.crypto_gcm_req_priv_ctx** %5, align 8
  %10 = getelementptr inbounds %struct.crypto_gcm_req_priv_ctx, %struct.crypto_gcm_req_priv_ctx* %9, i32 0, i32 2
  store %struct.crypto_gcm_ghash_ctx* %10, %struct.crypto_gcm_ghash_ctx** %6, align 8
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %21, label %13

13:                                               ; preds = %2
  %14 = load %struct.crypto_gcm_req_priv_ctx*, %struct.crypto_gcm_req_priv_ctx** %5, align 8
  %15 = getelementptr inbounds %struct.crypto_gcm_req_priv_ctx, %struct.crypto_gcm_req_priv_ctx* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.crypto_gcm_req_priv_ctx*, %struct.crypto_gcm_req_priv_ctx** %5, align 8
  %18 = getelementptr inbounds %struct.crypto_gcm_req_priv_ctx, %struct.crypto_gcm_req_priv_ctx* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @crypto_xor(i32 %16, i32 %19, i32 16)
  br label %21

21:                                               ; preds = %13, %2
  %22 = load %struct.crypto_gcm_ghash_ctx*, %struct.crypto_gcm_ghash_ctx** %6, align 8
  %23 = getelementptr inbounds %struct.crypto_gcm_ghash_ctx, %struct.crypto_gcm_ghash_ctx* %22, i32 0, i32 0
  %24 = load i32 (%struct.aead_request.0*, i32)*, i32 (%struct.aead_request.0*, i32)** %23, align 8
  %25 = load %struct.aead_request*, %struct.aead_request** %3, align 8
  %26 = bitcast %struct.aead_request* %25 to %struct.aead_request.0*
  %27 = load i32, i32* %4, align 4
  %28 = call i32 %24(%struct.aead_request.0* %26, i32 %27)
  ret void
}

declare dso_local %struct.crypto_gcm_req_priv_ctx* @crypto_gcm_reqctx(%struct.aead_request*) #1

declare dso_local i32 @crypto_xor(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
